<resources>
    <string name="app_name">Food</string>
    <string name="button_addFood">Add Food</string>
    <string name="hint_foodTitle">Food Title</string>
    <string name="hint_foodDescription">Food Description</string>
    <string name="menu_addFood">Add</string>
    <string name="menu_cancelFood">Cancel</string>
    <string name="save_food">Save Food</string>
    <string name="button_addImage">Add Image</string>
    <string name="enter_food_title">Please enter a Food Title</string>
    <string name="select_food_image">Select image</string>
    <string name="change_food_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteFood">Delete</string>
    <string name="menu_account">Account</string>
    <string name="title_activity_food_maps">Map of All Foods </string>
    <string name="title_activity_gallery">Gallery </string>
    <string name="title_activity_food_map">FoodMapActivity</string>
    <string name="title_account">Account </string>
    <string name="title_login">Login </string>
    <string name="title_register">Register </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="button_gallery">Gallery </string>
    <string name="hint_user">Email </string>
    <string name="hint_pass">Password </string>
    <string name="login_text">Login </string>
    <string name="logout_text">Logout </string>
    <string name="incorrect_login">Invalid username/password </string>
    <string name="register_error">Something was wrong </string>
    <string name="register_error_password">Password do not match</string>
    <string name="register_error_empty">Username or password cannot be empty</string>
    <string name="register_error_short">Password must be 6 chars or longer</string>
    <string name="register_error_invalid_email">Not a valid email address</string>
    <string name="success_login">Successfully logged in </string>
    <string name="hint_date">Date</string>
    <string name="register_button">Register</string>
    <string name="take_photo">Take Photo</string>
    <string name="description_filter">Filtering icon</string>
    <string name="filtering_by_date">Filtering By Date: %s</string>
    <string name="only_favourite_text">Only Favourites</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="test_night_mode">false</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="title_chart">Chart</string>
</resources>