<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/foodFragment"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/button_addFood"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/galleryFragment"
        android:icon="@drawable/baseline_image_24"
        android:title="@string/button_gallery"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_activity_food_maps"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_login"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/menu_account"
        app:showAsAction="ifRoom"/>
</menu>